# agentic-debate

./: .env.example  .gitignore  README.md  debate.py  fish-audio-tts-design.md  fish-audio-tts-plan.md  helpers.py  main.py  public_debate.py  pyproject.toml
docs/superpowers/plans/: 2026-06-23-voice-moderator.md  2026-06-24-sentiment-joke-tools.md
docs/superpowers/specs/: 2026-06-23-voice-moderator-design.md  2026-06-24-sentiment-joke-tools-design.md
host/: __init__.py  host.py  host_prompt.py
moderator/: __init__.py  moderator.py  moderator_prompt.py
normal_critic_debate/: debate.py  debate_system_prompts.py
public_debate/: helpers.py  public_debate.py  public_debate_system_prompt.py
public_debate/tools/: __init__.py  base.py  fallacy.py  joke.py  poll.py  quote.py  registry.py  search.py  sentiment.py
tests/: test_fish_split.py  test_joke.py  test_sentiment.py  test_slug.py  test_tool_integration.py
tui_formatter/: __init__.py  console.py  formatter.py  roles.py
voice/: __init__.py  edge.py  fish.py  player.py  provider.py  slug.py  tts.py  voices.py
