[project]
name = "agent-harness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.14.4",
    "edge-tts>=7.2.8",
    "fish-audio-sdk>=1.0.0",
    "ollama>=0.6.2",
    "miniaudio>=1.59",
    "numpy>=2.0.0",
    "sounddevice>=0.5.1",
    "python-dotenv>=1.2.2",
    "rich>=13.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
